Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12201

innodb_flush_method are not available on Windows

    XMLWordPrintable

Details

    • 10.2.5-1

    Description

      The purpose of this task is to make Windows behave the same as Unix with respect to different flush methods, i.e innodb_flush_method=O_DSYNC, O_DIRECT, O_DIRECT_NO_FSYNC etc.

      It probably makes sense to retain the current default behavior on Windows, where both redo log and data are used without buffering,and are flushed.

      Windows has exact corresponding options to unix-ly O_DIRECT (FILE_FLAG_NO_BUFFERING) and O_SYNC (FILE_FLAG_WRITE_THROUGH), so the separation of the flushing methods is artificial.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: