storage/innobase/srv/srv0srv.cc
@@ -308,11 +308,10 @@ a heavier load on the I/O sub system. */
 ulong	srv_insert_buffer_batch_size = 20;
 
 char*	srv_file_flush_method_str = NULL;
-#ifndef _WIN32
-enum srv_unix_flush_t	srv_unix_file_flush_method = SRV_UNIX_FSYNC;
-#else
-enum srv_win_flush_t	srv_win_file_flush_method = SRV_WIN_IO_UNBUFFERED;
-#endif /* _WIN32 */
+
+
+enum srv_flush_t	srv_file_flush_method = IF_WIN(SRV_ALL_O_DIRECT_FSYNC,SRV_FSYNC);
+
 
 ulint	srv_max_n_open_files	  = 300;
 
